--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,8 +17,7 @@
             <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
             <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
         </ul>
-        <p>User ID: [[${userID}]]</p>
-        <form action="#" th:action="@{selectSport/?userID={id}(id=${userID})}" th:object="${user}" method="post">
+        <form action="#" th:action="@{'/loginUser?playGroundName='+${playGroundName}}" th:object="${user}" method="post">
             <table border="1">
                 <tr>
                     <td>Email:</td>
