--- a/src/main/resources/templates/galleryPlayGround.html
+++ b/src/main/resources/templates/galleryPlayGround.html
@@ -4,7 +4,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <link href="../styles/styles.css" th:href="@{/styles/styles.css}" rel="stylesheet" />
-    <title>SportParkBooking - Home</title>
+    <title>SportParkBooking - Playground Gallery</title>
 </head>
 <body>
 <ul>
@@ -19,13 +19,15 @@
 <div class="myCenter">
 
 </div>
-<div class="row" >
-    <div class="column" th:each="sport: ${mySportList}" >
-        <div class="card">
-            <a th:href ="'galleryPlayGround?sportName='+${sport.SportName}"><img th:src="'/images/'+${sport.sportName}+'.jpg'" th:alt="${sport.sportName}" style="width:100%" height="600"></a>
-            <div class="container">
-                <h2><a th:href="'galleryPlayGround?sportName='+${sport.SportName}">[[${sport.sportName}]]</a></h2>
-            </div>
+<p><a href="/templates/gallery.html"  th:href="@{/}"><button>Back to Sports</button></a></p>
+<div class="row">
+    <div class="column" th:each="playGround: ${myPlayGroundList}" >
+        <a th:href ="'bookingPlayGround?playGroundName='+${playGround.playGroundName}"><img th:src="'/images/'+${playGround.playGroundName}+'.jpg'" th:alt="${playGround.playGroundName}" style="width:100%" height="400"></a>
+        <div class="container">
+            <h2><a th:href="'bookingPlayGround?playGroundName='+${playGround.playGroundName}">[[${playGround.playGroundName}]]</a></h2>
+            <h3>Price per hour: [[${playGround.pricePerHour}]] RON </h3>
+            <h3>Location: [[${playGround.playGroundAddress}]]</h3>
+            <p>[[${playGround.playGroundDescription}]]</p>
         </div>
     </div>
 </div>
