--- a/src/main/resources/templates/index_copy.html
+++ b/src/main/resources/templates/index_copy.html
@@ -2,10 +2,10 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <link href="../styles/styles.css" th:href="@{/styles/styles.css}" rel="stylesheet" />
-        <title>SportParkBooking - ConfirmationLogin</title>
-    </head>
+<head>
+    <link href="../static/styles/styles.css" th:href="@{/styles/styles.css}" rel="stylesheet" />
+    <title>SportParkBooking</title>
+</head>
     <body>
         <ul>
             <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
@@ -16,11 +16,11 @@
             <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
             <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
         </ul>
-        <h2 class="confirmLogin-title" th:text="'Hello '+ ${name} + ','"></h2>
-        <h2 class="confirmLogin-title" th:text="'Your login is successful' + '!'"></h2>
-        <h2 class="confirmLogin-title" th:text="'Go to booking' + '!'"></h2>
-        <img src="/images/login.jpg"
-             th:attr="src=@{/images/login.jpg},title=#{LoginConfirmation},alt=#{LoginConfirmation}" />
-
+        <div class="myCenter">
+            <h1>Sport Park Booking</h1>
+            <br><br>
+            <img src="/images/home.jpg"
+                 th:attr="src=@{/images/home.jpg},title=#{SportParkBooking},alt=#{SportParkBooking}" />
+        </div>
     </body>
 </html>
