--- a/src/main/resources/templates/infoBooking.html
+++ b/src/main/resources/templates/infoBooking.html
@@ -20,20 +20,20 @@
 <h2 class="confirmLogin-title" th:text="'Your reservation for '+${playGroundName}+' is ready'"></h2>
 <h2 class="confirmLogin-title" th:text="'for '+${booking.bookingDate}"></h2>
 <h2 class="confirmLogin-title" th:text="'from '+${booking.bookingHour}"></h2>
-<h2 class="confirmLogin-title" th:text="'you have '+${booking.bookingDuration}+' hours.'"></h2>
+<h2 class="confirmLogin-title" th:text="'you have '+${booking.bookingDuration}+' hours booked.'"></h2>
 <br/>
 <h2 class="confirmLogin-title" th:text="'Total price: '+${bookingPrice}+' RON'"></h2>
 <h2 class="confirmLogin-title" th:text="'Please confirm.'"></h2>
 
  <div>
-        <button type="button">
-            <a th:href="@{'/confirmBooking?playGroundName='+${playGroundName}+'&userID='+${userID}+'&bookingDate='+${booking.bookingDate}+'&bookingHour='+${booking.bookingHour}+'&bookingDuration='+${booking.bookingDuration}}">Submit</a>
-        </button>
+     <button type="button">
+         <a th:href="@{'/'}">Cancel</a>
+     </button>
 
-         <button type="button">
-             <a th:href="@{'/'}">Cancel</a>
-         </button>
-    </div>
+     <button type="button">
+         <a th:href="@{'/confirmBooking?playGroundName='+${playGroundName}+'&userID='+${userID}+'&bookingDate='+${booking.bookingDate}+'&bookingHour='+${booking.bookingHour}+'&bookingDuration='+${booking.bookingDuration}}">Confirm booking</a>
+     </button>
+ </div>
 
 </body>
 </html>
