images for login and register

--- a/src/main/resources/templates/loginOrRegister.html
+++ b/src/main/resources/templates/loginOrRegister.html
@@ -17,6 +17,13 @@
     <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
     <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
 </ul>
+<div class="myCenter">
+
+</div>
+<p><a th:href="@{'/galleryPlayGround?sportName='+${sportName}}"><button>Back to Playgrounds</button></a></p>
+<img src="/images/loginOrRegister.jpg"
+     th:attr="src=@{/images/loginOrRegister.jpg},title=#{loginOrRegister},alt=#{loginOrRegister}" />
+
 <!--<p> <a th:href="@{'/login?playGroundName='+${playGroundName}}" th:text="Login"/></p>-->
 <p> Login to make booking: </p>
 <form action="#" th:action="@{'/loginUser?playGroundName='+${playGroundName}}" th:object="${user}" method="post">
