--- a/src/main/resources/templates/bookingNotAvailable.html
+++ b/src/main/resources/templates/bookingNotAvailable.html
@@ -9,7 +9,6 @@
 <body>
 <ul>
     <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
-    <li><a  href="/templates/booking.html" th:href="@{/booking}"> Booking</a></li>
     <li><a  href="/templates/login.html"    th:href="@{/login}"> Login</a></li>
     <li><a  href="/templates/register.html" th:href="@{/register}"> Register</a></li>
     <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
@@ -20,17 +19,17 @@
 
 
 <h2 class="confirmLogin-title" th:text="'Hello '+ ${userName} + ','"></h2>
-<p>The playground is already booked for [[${myHoursBooked}]]. Please select another booking!</p>
-
-<form action="#" th:action="@{'/selectBookingDate?playGroundName='+${playGroundName}+'&userID='+${userID}}" th:object="${booking}" method="post">
-    <table border="0">
-        <tr>
-            <td>
-                <input type="submit" value="Submit" />
-            </td>
-        </tr>
-    </table>
-</form>
+<p>The playground is already booked for [[${myHoursBooked}]]. Please select another booking time!</p>
+<p><a th:href="@{'/selectBookingDate?playGroundName='+${playGroundName}+'&userID='+${userID}}"><button>Select another booking time</button></a></p>
+<!--<form action="#" th:action="@{'/selectBookingDate?playGroundName='+${playGroundName}+'&userID='+${userID}}" th:object="${booking}" method="post">-->
+<!--    <table border="0">-->
+<!--        <tr>-->
+<!--            <td>-->
+<!--                <input type="submit" value="Select another booking" />-->
+<!--            </td>-->
+<!--        </tr>-->
+<!--    </table>-->
+<!--</form>-->
 
 <!--<button type="submit">Submit</button>-->
 <!--<button type="button">-->
