--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,15 +9,15 @@
 <body>
 <ul>
     <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
-    <li><a  href="/templates/booking.html" th:href="@{/booking}"> Booking</a></li>
     <li><a  href="/templates/login.html"    th:href="@{/login}"> Login</a></li>
     <li><a  href="/templates/register.html" th:href="@{/register}"> Register</a></li>
     <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
     <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
     <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
 </ul>
-<div class="myCenter">
-
+<div>
+    <h1>Sports Park Booking</h1>
+    <h2>Choose your desired sport and see available playground hours and prices.</h2>
 </div>
 <div class="row" >
     <div class="column" th:each="sport: ${mySportList}" >
