--- a/src/main/resources/templates/loginOrRegister.html
+++ b/src/main/resources/templates/loginOrRegister.html
@@ -10,7 +10,6 @@
 
 <ul>
     <li><a  href="/templates/home.html"     th:href="@{/home}"> Home</a></li>
-    <li><a  href="/templates/booking.html" th:href="@{/booking}"> Booking</a></li>
     <li><a  href="/templates/login.html"    th:href="@{/login}"> Login</a></li>
     <li><a  href="/templates/register.html" th:href="@{/register}"> Register</a></li>
     <li><a  href="/templates/aboutUs.html"  th:href="@{/aboutUs}"> About us</a></li>
@@ -39,7 +38,7 @@
 
         <tr>
             <td><input type="reset" value="Reset" /> </td>
-            <td><input type="submit" value="Submit" /></td>
+            <td><input type="submit" value="Start Booking" /></td>
 
         </tr>
 
