--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -18,28 +18,28 @@
 </ul>
 <div class="about-section">
     <h1>Sport Park Booking</h1>
-    <p>Cea mai mare platformă din județul Cluj pentru rezervari online de terenuri de sport.</p>
+    <p>The largest platform in Cluj for online booking of sports playgrounds.</p>
 </div>
 
 <h2 style="text-align:center"> </h2>
 <div class="about-section2">
-    <p><strong>Sunteți interesat să rezervați un teren de sport ?</strong>
+    <p><strong>Are you interested in booking a sports playground?</strong>
         <ulMain>
-            <li><i class="entypo-play"></i>SportParkBooking este un site care vă ajută să faceți rezervarea online gratuit și ușor.</li>
-            <li><i class="entypo-play"></i>SportParkBooking răspunde nevoilor moderne de mobilitate și de optimizare a timpului oferit recreerii și exercițiilor fizice.</li>
+            <li><i class="entypo-play"></i>SportParkBooking is a site that helps you make your reservation online for free and easy.</li>
+            <li><i class="entypo-play"></i>SportParkBooking meets the modern needs of mobility and optimization of time spent on recreation and exercise.</li>
         </ulMain>
     </p>
-    <p><strong>Doriți să aveți în față toate detaliile legate de ofertele existente?</strong>
+    <p><strong>Do you want to have all the details of existing offers in front of you?</strong>
         <ulMain>
-            <li><i class="entypo-play"></i>Toate datele necesare rezervării vă sunt acum centralizate și disponibile online. Astfel, decizia nu mai trebuie luată pe moment și în lipsa unor informații importante.</li>
-            <li><i class="entypo-play"></i>SportParkBooking vă oferă posibilitatea de a analiza comparativ facilitățile și tarifele terenurilor de sport care corespund căutărilor dumneavoastră.</li>
-            <li><i class="entypo-play"></i>Puteți vizualiza alături de prieteni informațiile generale și intervalele orare disponibile în timp real, pentru a lua decizia potrivită.</li>
+            <li><i class="entypo-play"></i>All your booking details are now centralized and available online. Thus, the decision no longer has to be made in the absence of important information.</li>
+            <li><i class="entypo-play"></i>SportParkBooking gives you the opportunity to comparatively analyze the facilities and rates of sports fields that correspond to your searches.</li>
+            <li><i class="entypo-play"></i>You can view the general information and time slots available in real time with your friends to make the right decision.</li>
         </ulMain>
     </p>
-    <p><strong>Cum procedez?</strong>
+    <p><strong>How do I make a booking?</strong>
         <ulMain>
-            <li><i class="entypo-play"></i>Prin sistemul gratuit de rezervare online, clientul își creează un cont, se înregistrează și își rezervă terenul de sport selectat în intervalul ales printr-o simplă apăsare de buton.</li>
-            <li><i class="entypo-play"></i>Clientul primește pe e-mail confirmarea. La fel de accesibilă este și anularea unei rezervări.</li>
+            <li><i class="entypo-play"></i>Through the free online booking system, the customer creates an account, registers and reserves the selected sports playground in the chosen interval with a simple push of a button.</li>
+            <li><i class="entypo-play"></i>The customer receives the confirmation by e-mail. Cancellation of a reservation is also available.</li>
         </ulMain>
     </p>
 </div>
@@ -49,13 +49,13 @@
     <div class="copyright" >
         <div>
             <ulFooter>
-                <p><span class="iconify" data-icon="entypo-location-pin" data-inline="false"></span> Bulevardul Eroilor, nr. 1, Cluj-Napoca</li></p>
+                <p><span class="iconify" data-icon="entypo-location-pin" data-inline="false"></span> Bulevardul Eroilor nr. 1, Cluj-Napoca</li></p>
                 <p><span class="iconify" data-icon="entypo-mail" data-inline="false"></span> home@sportparkbooking.ro</p>
-                <p><span class="iconify" data-icon="entypo-clock" data-inline="false"></span> Rezervari NON-STOP</p>
+                <p><span class="iconify" data-icon="entypo-clock" data-inline="false"></span> NON-STOP bookings</p>
             </ulFooter>
         </div>
         <div class="container">
-            <p class="pull-left" >&copy; Toate drepturile rezervate Sport Park Booking</p>
+            <p class="pull-left" >&copy; All rights reserved: Sport Park Booking</p>
         </div>
     </div>
 </footer>
