--- a/src/main/resources/templates/selectBookingDate.html
+++ b/src/main/resources/templates/selectBookingDate.html
@@ -20,7 +20,7 @@
 <h1>Please select booking date</h1>
 <br><br>
 
-<form action="#" th:action="@{'/selectBooking?playGroundName='+${playGroundName}+'&userID='+${userID}}" th:object="${booking}" method="post">
+<form action="#" th:action="@{'/selectBookingHours?playGroundName='+${playGroundName}+'&userID='+${userID}}" th:object="${booking}" method="post">
     <table border="1">
         <tr>
             <td>Date:</td>
