cleaned up unused pictures

--- a/src/main/resources/templates/gallery.html
+++ b/src/main/resources/templates/gallery.html
@@ -19,7 +19,7 @@
         <div class="row" id="contentRow">
             <div class="column">
                 <a href="galleryFotbal" id="hrefContent1">
-                    <img src="/images/fotbal.jpg" alt="Fotbal">
+                    <img src="/images/football.jpg" alt="Football">
                 </a>
                 <div class="container">
                     <h2><a href="galleryFotbal" id="hrefContent3">Fotbal</a></h2>
@@ -27,7 +27,7 @@
             </div>
             <div class="column">
                 <a href="galleryTenis" id="hrefContent2">
-                    <img src="/images/tenis.jpg" alt="Tenis"  >
+                    <img src="/images/tennis.jpg" alt="Tennis"  >
                 </a>
                 <div class="container">
                     <h2><a href="galleryTenis" id="hrefContent4">Tenis</a></h2>
