--- a/src/main/resources/templates/galleryFotbal.html
+++ b/src/main/resources/templates/galleryFotbal.html
@@ -21,7 +21,7 @@
         <p><a href="/templates/gallery.html"  th:href="@{/gallery}"><button>Back to gallery</button></a></p>
         <div class="row" id="contentRow">
             <div class="column" id="contentColumn1">
-                <img src="/images/Fotbal_1.jpg" alt="Fotbal_1" >
+                <img src="/images/FootballField1.jpg" alt="FootballField1" >
                 <div class="container">
                     <h2>Teren 1</h2>
                     <p>Sus pe Feleac va oferim o oportunitate unică ! Fotbal în mijlocul naturii într-o locație deosebită !</p>
@@ -29,7 +29,7 @@
             </div>
 
             <div class="column" id="contentColumn2">
-                <img src="/images/Fotbal_2.jpg" alt="Fotbal_2" >
+                <img src="/images/FootballField2.jpg" alt="FootballField2" >
                 <div class="container">
                     <h2>Teren 2</h2>
                     <p>Pentru o combinație perfectă de sport + ieșire în natură vă recomandăm terenul numărul 2 !
@@ -38,7 +38,7 @@
             </div>
 
             <div class="column" id="contentColumn3">
-                <img src="/images/Fotbal_3.jpg" alt="Fotbal_3">>
+                <img src="/images/FootballField3.jpg" alt="FootballField3">>
                 <div class="container">
                     <h2>Teren 3</h2>
                     <p>Situat pe drumul care leagă Cluj-Napoca de Turda acest teren vă oferă posibilitatea de a face sport într-un loc cu adevărat de vis !</p>
@@ -46,7 +46,7 @@
             </div>
 
             <div class="column" id="contentColumn4">
-                <img src="/images/Fotbal_4.jpg" alt="Fotbal_4" >
+                <img src="/images/FootballField4.jpg" alt="FootballField4" >
                 <div class="container">
                     <h2>Teren 4</h2>
                     <p>Vă invităm să descoperiți noul nostru teren amenajat pe lacul Gheorgheni ! Rezervați din timp. Este una dintre cele mai cerute locații !</p>
@@ -54,7 +54,7 @@
             </div>
 
             <div class="column" id="contentColumn5">
-                <img src="/images/Fotbal_5.jpg" alt="Fotbal_5" >
+                <img src="/images/FootballField5.jpg" alt="FootballField5" >
                 <div class="container">
                     <h2>Teren 5</h2>
                     <p>Cel mai nou teren pe care il punem la dispoziția clienților noștri este și cel mai spectaculos ! Situat în zona Florești acest teren beneficiază de încălzire subterană astfel
