--- a/src/main/resources/templates/galleryTenis.html
+++ b/src/main/resources/templates/galleryTenis.html
@@ -20,7 +20,7 @@
 
         <div class="row" id="contentRow">
             <div  class="column"  id="contentColumn1">
-                <img src="/images/Tenis_1.jpg" alt="Tenis_1" >
+                <img src="/images/TennisField1.jpg" alt="TennisField1" >
                 <div class="container">
                     <h2>Teren 1</h2>
                     <p>Terenul 1 este pentru relaxare, relaxare, relaxare ! Nici nu ar putea fi altfel dat fiind zona superbă care îl înconjoară !
@@ -29,7 +29,7 @@
             </div>
 
             <div class="column" id="contentColumn2">
-                <img src="/images/Tenis_2.jpg" alt="Tenis_2">
+                <img src="/images/TennisField2.jpg" alt="TennisField2">
                 <div class="container">
                     <h2>Teren 2</h2>
                     <p>Situat chiar în inima orașului Cluj-Napoca la doi pași de centru, în cadrul unui club exclusivist terenul numărul 2 este pentru cei care vor mai mult decăt o simplă oră de sport !</p>
@@ -37,7 +37,7 @@
             </div>
 
             <div class="column" id="contentColumn3">
-                <img src="/images/Tenis_3.jpg" alt="Tenis_3">
+                <img src="/images/TennisField3.jpg" alt="TennisField3">
                 <div class="container">
                     <h2>Teren 3</h2>
                     <p>Amenajat în vechea gară a orașului Cluj acest teren vă invită la o porție de mișcare și de istorie în același timp !</p>
