--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,6 +16,13 @@
             <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
             <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
         </ul>
+        <p><br/></p>
+
+        <img src="/images/login.jpg"
+             th:attr="src=@{/images/login.jpg},title=#{login},alt=#{login}" />
+        <p><br/></p>
+        <p> Login user: </p>
+
         <form action="#" th:action="@{'/selectBookingDate?playGroundName='+${playGroundName}}" th:object="${user}" method="post">
             <table border="1">
                 <tr>
