--- a/src/main/resources/templates/selectBookingDate.html
+++ b/src/main/resources/templates/selectBookingDate.html
@@ -32,6 +32,16 @@
                 <input type="submit" value="Select hour" />
             </td>
         </tr>
+        <style>
+                body {
+                  background-image: url('/images/booking.jpg');
+                  width: auto;
+                  height: auto;
+                  background-repeat: no-repeat;
+                  background-size: 100%;
+                  background-position: center%;
+                }
+        </style>
 
     </table>
 </form>
