--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,5 +30,15 @@
         </div>
     </div>
 </div>
+<!--    <style>-->
+<!--            body {-->
+<!--              background-image: url('/images/index.jpg');-->
+<!--              width: auto;-->
+<!--              height: auto;-->
+<!--              background-repeat: no-repeat;-->
+<!--              background-size: 100%;-->
+<!--              background-position: center%;-->
+<!--            }-->
+<!--    </style>-->
 </body>
 </html>
