--- a/src/main/resources/templates/infoBooking.html
+++ b/src/main/resources/templates/infoBooking.html
@@ -15,7 +15,7 @@
     <li><a  href="/templates/gallery.html"  th:href="@{/gallery}"> Gallery</a></li>
     <li><a  href="/templates/contact.html"  th:href="@{/contact}"> Contact</a></li>
 </ul>
-<h2 class="confirmLogin-title" th:text="'Great, '+${userName}+'! Here are your booking details: '"></h2>
+<h2 class="confirmLogin-title" style="font-size:30px" th:text="'Great, '+${userName}+'! Here are your booking details: '"></h2>
 <h2 class="confirmLogin-title" th:text="' -booking playground: '+${playGroundName}"></h2>
 <h2 class="confirmLogin-title" th:text="' -booking date: '+${booking.bookingDate}"></h2>
 <h2 class="confirmLogin-title" th:text="' -booking hour: '+${booking.bookingHour}"></h2>
@@ -33,6 +33,17 @@
          <a th:href="@{'/confirmBooking?playGroundName='+${playGroundName}+'&userID='+${userID}+'&bookingDate='+${booking.bookingDate}+'&bookingHour='+${booking.bookingHour}+'&bookingDuration='+${booking.bookingDuration}}">Yes, confirm booking</a>
      </button>
  </div>
+
+    <style>
+            body {
+              background-image: url('/images/infoBooking.jpg');
+              width: auto;
+              height: auto;
+              background-repeat: no-repeat;
+              background-size: 100%;
+              background-position: center%;
+            }
+    </style>
 
 </body>
 </html>
